<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RecordMoreActivity"
    android:background="@color/bg_progress">

    <com.shunlin.heartwatch.ui.TitleView
        android:id="@+id/record_more_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/record_more_record" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/record_more_rv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_more_title" />

    <LinearLayout
        android:id="@+id/record_more_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="126dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_more_title">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_no_record"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_more_no"
            android:textColor="@color/text_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/record_more_to_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_more_to"
            android:textColor="@color/main_theme"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>