<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_dialog_date"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_record_item"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="22sp"
            android:text="@string/setting_time"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17sp"
            android:lineHeight="18sp"
            android:text="@string/setting_year"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_title" />

        <com.shunlin.heartwatch.ui.HorizontalPicker
            android:id="@+id/hp_year"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_year"
            app:normalTextColor="@color/text_nav_normal"
            app:selectedTextColor="@color/bg_record_data" />

        <View
            android:id="@+id/line_year"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/bg_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hp_year" />

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineHeight="18sp"
            android:text="@string/setting_month"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_year" />

        <com.shunlin.heartwatch.ui.HorizontalPicker
            android:id="@+id/hp_month"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_month"
            app:normalTextColor="@color/text_nav_normal"
            app:selectedTextColor="@color/bg_record_data" />

        <View
            android:id="@+id/line_month"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/bg_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hp_month" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineHeight="18sp"
            android:text="@string/setting_day"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_month" />

        <com.shunlin.heartwatch.ui.HorizontalPicker
            android:id="@+id/hp_day"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_day"
            app:normalTextColor="@color/text_nav_normal"
            app:selectedTextColor="@color/bg_record_data" />

        <View
            android:id="@+id/line_day"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/bg_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hp_day" />

        <TextView
            android:id="@+id/tv_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineHeight="18sp"
            android:text="@string/setting_hour"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_day" />

        <com.shunlin.heartwatch.ui.HorizontalPicker
            android:id="@+id/hp_hour"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hour"
            app:normalTextColor="@color/text_nav_normal"
            app:selectedTextColor="@color/bg_record_data" />

        <View
            android:id="@+id/line_hour"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/bg_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hp_hour" />

        <TextView
            android:id="@+id/tv_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineHeight="18sp"
            android:text="@string/setting_second"
            android:textColor="@color/text_gray"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_hour" />

        <com.shunlin.heartwatch.ui.HorizontalPicker
            android:id="@+id/hp_second"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_second"
            app:normalTextColor="@color/text_nav_normal"
            app:selectedTextColor="@color/bg_record_data" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_record_more"
            android:lineHeight="20sp"
            android:text="@string/btn_cancel"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/dialog_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hp_second" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_button_red"
            android:lineHeight="20sp"
            android:text="@string/record_save"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dialog_cancel"
            app:layout_constraintTop_toBottomOf="@id/hp_second" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>