<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RecordFragment">

    <ImageView
        android:id="@+id/record_top_bg"
        android:layout_width="344dp"
        android:layout_height="244dp"
        android:layout_marginTop="56dp"
        android:background="@mipmap/bg_record_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/record_top_add_bg"
        android:layout_width="96dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button_red"
        app:layout_constraintBottom_toBottomOf="@id/record_top_bg"
        app:layout_constraintStart_toStartOf="@id/record_top_bg" />

    <ImageView
        android:id="@+id/record_top_add_image"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="17dp"
        android:src="@mipmap/ic_record_add"
        app:layout_constraintBottom_toBottomOf="@id/record_top_add_bg"
        app:layout_constraintStart_toStartOf="@id/record_top_add_bg"
        app:layout_constraintTop_toTopOf="@id/record_top_add_bg" />

    <TextView
        android:id="@+id/record_top_add_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="20sp"
        android:text="@string/record_new"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/record_top_add_image"
        app:layout_constraintStart_toEndOf="@id/record_top_add_image"
        app:layout_constraintTop_toTopOf="@id/record_top_add_image" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/record_top_more_bg"
        android:layout_width="68dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_record_more"
        android:text="@string/record_more"
        android:textColor="@color/text_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/record_top_add_bg"
        app:layout_constraintStart_toEndOf="@id/record_top_add_bg"
        app:layout_constraintTop_toTopOf="@id/record_top_add_bg" />

    <ImageView
        android:id="@+id/record_top_sys_bg"
        android:layout_width="120dp"
        android:layout_height="92dp"
        android:layout_marginBottom="4dp"
        android:background="@mipmap/bg_record_sys"
        app:layout_constraintBottom_toTopOf="@id/record_top_dias_bg"
        app:layout_constraintEnd_toEndOf="@id/record_top_dias_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="16sp"
        android:text="@string/record_sys"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/record_top_sys"
        app:layout_constraintEnd_toEndOf="@id/record_top_sys_bg"
        app:layout_constraintStart_toStartOf="@id/record_top_sys_bg" />

    <TextView
        android:id="@+id/record_top_sys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="28sp"
        android:text="124"
        android:textColor="@color/main_theme"
        android:textFontWeight="900"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/record_top_sys_bg"
        app:layout_constraintEnd_toEndOf="@id/record_top_sys_bg"
        app:layout_constraintStart_toStartOf="@id/record_top_sys_bg"
        app:layout_constraintTop_toTopOf="@id/record_top_sys_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="16sp"
        android:text="@string/record_unit"
        android:textColor="@color/text_nav_normal"
        android:textFontWeight="400"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/record_top_sys_bg"
        app:layout_constraintStart_toStartOf="@id/record_top_sys_bg"
        app:layout_constraintTop_toBottomOf="@id/record_top_sys" />

    <ImageView
        android:id="@+id/record_top_dias_bg"
        android:layout_width="120dp"
        android:layout_height="92dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@mipmap/bg_record_dias"
        app:layout_constraintBottom_toBottomOf="@id/record_top_bg"
        app:layout_constraintEnd_toEndOf="@id/record_top_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="16sp"
        android:text="@string/record_dias"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/record_top_dias"
        app:layout_constraintEnd_toEndOf="@id/record_top_dias_bg"
        app:layout_constraintStart_toStartOf="@id/record_top_dias_bg" />

    <TextView
        android:id="@+id/record_top_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="28sp"
        android:text="86"
        android:textColor="@color/main_theme"
        android:textFontWeight="900"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/record_top_dias_bg"
        app:layout_constraintEnd_toEndOf="@id/record_top_dias_bg"
        app:layout_constraintStart_toStartOf="@id/record_top_dias_bg"
        app:layout_constraintTop_toTopOf="@id/record_top_dias_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="16sp"
        android:text="@string/record_unit"
        android:textColor="@color/text_nav_normal"
        android:textFontWeight="400"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/record_top_dias_bg"
        app:layout_constraintStart_toStartOf="@id/record_top_dias_bg"
        app:layout_constraintTop_toBottomOf="@id/record_top_dias" />
    <ImageView
        android:id="@+id/record_top_filter_bg"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_record_recent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/record_top_filter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="20sp"
        android:text="@string/record_recent"
        android:textColor="@color/text_black"
        android:textFontWeight="500"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/record_top_filter_bg"
        app:layout_constraintEnd_toStartOf="@id/record_top_filter_image"
        app:layout_constraintTop_toTopOf="@id/record_top_filter_bg" />

    <ImageView
        android:id="@+id/record_top_filter_image"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="12dp"
        android:src="@mipmap/ic_record_packup"
        app:layout_constraintBottom_toBottomOf="@id/record_top_filter_bg"
        app:layout_constraintEnd_toEndOf="@id/record_top_filter_bg"
        app:layout_constraintTop_toTopOf="@id/record_top_filter_bg" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/record_rv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/record_top_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>